--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
     <modules>
         <module>order-service</module>
         <module>common</module>
+        <module>infrastructure</module>
     </modules>
 
     <properties>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <mockito.version>4.8.1</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -61,7 +63,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>4.8.1</version>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
