Kafka Model generic module implemented

--- a/infrastructure/docker-compose/kafka_cluster.yml
+++ b/infrastructure/docker-compose/kafka_cluster.yml
@@ -34,6 +34,7 @@ services:
       - "./volumes/kafka/broker-1:/var/lib/kafka/data"
     networks:
       - ${GLOBAL_NETWORK:-kafka}
+# TODO: Make 3 brokers when deploy on the Kubernetes
 #  kafka-broker-2:
 #    image: confluentinc/cp-kafka:${KAFKA_VERSION}
 #    hostname: kafka-broker-2
